--- a/src/app/features/hero/hero.component.html
+++ b/src/app/features/hero/hero.component.html
@@ -12,9 +12,7 @@
     </p>
 
     <!-- Button Container -->
-    <div
-      class="flex flex-col justify-center w-full space-y-6 text-xl text-white md:flex-row md:space-y-0 md:space-x-4"
-    >
+    <div class="button-container">
       <a href="" class="bg-strongCyan" appButton> Download for iOs </a>
       <a href="" class="bg-lightBlue" appButton> Download for Mac </a>
     </div>
