--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,10 @@
   @apply max-w-6xl mx-auto text-center;
 }
 
+.button-container {
+  @apply flex flex-col justify-center w-full space-y-6 text-xl text-white md:flex-row md:space-y-0 md:space-x-4;
+}
+
 body {
   background-image: url("../public/bg-header-mobile.png");
   background-repeat: no-repeat;
