--- a/src/app/features/snippets/snippets.component.html
+++ b/src/app/features/snippets/snippets.component.html
@@ -1,9 +1,7 @@
 <!-- Snippets Section -->
 <section id="snippets">
-  <div class="max-w-6xl mx-auto text-center my-20 p-10">
-    <h3 class="mb-8 text-4xl font-bold text-darkGrayishBlue md:text-5xl">
-      Keep track of your snippets
-    </h3>
+  <div class="section-container my-20 p-10">
+    <h3>Keep track of your snippets</h3>
     <p
       class="max-w-3xl mx-auto mb-24 text-xl leading-9 text-center text-grayishBlue"
     >
