fix(styles): remove x axis padding from section container

--- a/src/app/features/hero/hero.component.html
+++ b/src/app/features/hero/hero.component.html
@@ -1,6 +1,6 @@
 <!-- Hero -->
 <section id="hero">
-  <div class="section-container mb-40 px-10 pt-16 section-hero">
+  <div class="section-container mb-40 pt-16 section-hero">
     <img src="logo.svg" alt="" class="mx-auto my-16" />
 
     <h3>A history of everything you copy</h3>
