--- a/src/app/features/snippets/snippets.component.html
+++ b/src/app/features/snippets/snippets.component.html
@@ -1,6 +1,6 @@
 <!-- Snippets Section -->
 <section id="snippets">
-  <div class="section-container my-20 p-10">
+  <div class="section-container my-20">
     <h3>Keep track of your snippets</h3>
     <p
       class="max-w-3xl mx-auto mb-24 text-xl leading-9 text-center text-grayishBlue"
