feat: add feature component to the app component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-hero></app-hero> <app-snippets></app-snippets>
+<app-hero></app-hero>
+<app-snippets></app-snippets>
+<app-features></app-features>
