--- a/src/app/features/features/features.component.html
+++ b/src/app/features/features/features.component.html
@@ -1,3 +1,27 @@
 <section id="features">
-  <div class="section-container my-20"></div>
+  <div class="section-container my-20">
+    <div class="relative flex flex-col md:flex-row md:space-x-32">
+      <div class="md:w-1/2">
+        <img
+          src="image-computer.png"
+          class="md:absolute top-0 right-[50%]"
+          alt=""
+        />
+      </div>
+
+      <!-- Items Container -->
+      <div
+        class="flex flex-col mt-16 mb-24 space-y-12 text-xl md:mb-60 md:text-left md:pl-16 md:w-1/2"
+      >
+        <div class="" *ngFor="let feat of features">
+          <h5 class="mb-2 text-2xl font-bold text-darkGrayishBlue">
+            {{ feat.title }}
+          </h5>
+          <p class="max-w-md text-grayishBlue">
+            {{ feat.description }}
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
