feat: add access anywhere section component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-hero></app-hero>
 <app-snippets></app-snippets>
 <app-features></app-features>
+<app-anywhere-clipboard-access></app-anywhere-clipboard-access>
