--- a/src/app/features/anywhere-clipboard-access/anywhere-clipboard-access.component.html
+++ b/src/app/features/anywhere-clipboard-access/anywhere-clipboard-access.component.html
@@ -1,1 +1,12 @@
-<p>anywhere-clipboard-access works!</p>
+<section id="access" class="">
+  <div class="section-container my-20">
+    <h3>{{ sectionData.title }}</h3>
+    <p
+      class="max-w-3xl mx-auto mb-24 text-xl leading-9 text-center text-grayishBlue"
+    >
+      {{ sectionData.description }}
+    </p>
+
+    <img src="image-devices.png" alt="" class="mx-auto" />
+  </div>
+</section>
