feat: add supercharge section component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,4 @@
 <app-snippets></app-snippets>
 <app-features></app-features>
 <app-anywhere-clipboard-access></app-anywhere-clipboard-access>
+<app-supercharge></app-supercharge>
