--- a/src/app/features/anywhere-clipboard-access/anywhere-clipboard-access.component.html
+++ b/src/app/features/anywhere-clipboard-access/anywhere-clipboard-access.component.html
@@ -1,9 +1,7 @@
 <section id="access" class="">
   <div class="section-container my-20">
     <h3>{{ sectionData.title }}</h3>
-    <p
-      class="max-w-3xl mx-auto mb-24 text-xl leading-9 text-center text-grayishBlue"
-    >
+    <p class="section-content mb-24">
       {{ sectionData.description }}
     </p>
 
