--- a/src/app/features/hero/hero.component.html
+++ b/src/app/features/hero/hero.component.html
@@ -4,7 +4,7 @@
     <img src="logo.svg" alt="" class="mx-auto my-16" />
 
     <h3>A history of everything you copy</h3>
-    <p class="max-w-3xl mx-auto mb-10 text-2xl text-grayishBlue">
+    <p class="section-content mb-10 text-2xl">
       Clipboard allows you to track and organize you everything copy. Instantly
       access your clipboard on all your devices
     </p>
