--- a/src/app/features/snippets/snippets.component.html
+++ b/src/app/features/snippets/snippets.component.html
@@ -2,9 +2,7 @@
 <section id="snippets">
   <div class="section-container my-20">
     <h3>Keep track of your snippets</h3>
-    <p
-      class="max-w-3xl mx-auto mb-24 text-xl leading-9 text-center text-grayishBlue"
-    >
+    <p class="section-content mb-24">
       Clipboard instantly stores any item you copy in the cloud, meaning you can
       access your snippets immediately on all your devices. Our Mac and iOS apps
       will help you organize everything.
