--- a/src/app/features/supercharge/supercharge.component.html
+++ b/src/app/features/supercharge/supercharge.component.html
@@ -1,8 +1,23 @@
 <section id="supercharge">
   <div class="section-container my-20">
     <h3>Supercharge your workflow</h3>
-    <p
-      class="max-w-3xl mx-auto mb-16 text-xl leading-9 text-center text-grayishBlue"
-    ></p>
+    <p class="mb-16 section-content">
+      We've got the tools to boost your productivity
+    </p>
+    <!-- Items Container -->
+    <div
+      class="flex flex-col items-center justify-between space-y-16 md:flex-row md:space-y-0 md:space-x-12"
+    >
+      <!-- Rendering Items Dynamically -->
+      @for (item of items; track items.length) {
+      <div class="flex flex-col items-center space-y-5">
+        <img [src]="item.image" [alt]="item.title" class="mb-6" />
+        <h5>{{ item.title }}</h5>
+        <p class="max-w-md text-grayishBlue">
+          {{ item.description }}
+        </p>
+      </div>
+      }
+    </div>
   </div>
 </section>
