styles: remove repeated CSS classes

--- a/src/app/features/features/features.component.html
+++ b/src/app/features/features/features.component.html
@@ -14,7 +14,7 @@
         class="flex flex-col mt-16 mb-24 space-y-12 text-xl md:mb-60 md:text-left md:pl-16 md:w-1/2"
       >
         <div class="" *ngFor="let feat of features">
-          <h5 class="mb-2 text-2xl font-bold text-darkGrayishBlue">
+          <h5 class="">
             {{ feat.title }}
           </h5>
           <p class="max-w-md text-grayishBlue">
