--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,4 @@
 <app-features></app-features>
 <app-anywhere-clipboard-access></app-anywhere-clipboard-access>
 <app-supercharge></app-supercharge>
+<app-references></app-references>
