--- a/src/app/features/references/references.component.html
+++ b/src/app/features/references/references.component.html
@@ -3,10 +3,8 @@
   <div
     class="flex flex-col items-center justify-between max-w-6xl px-10 mx-auto space-y-16 my-44 md:flex-row md:space-y-0"
   >
-    <img src="logo-google.png" alt="" />
-    <img src="logo-ibm.png" alt="" />
-    <img src="logo-microsoft.png" alt="" />
-    <img src="logo-hp.png" alt="" />
-    <img src="logo-vector-graphics.png" alt="" />
+    @for (logo of logos; track logos.length) {
+    <img [src]="logo.src" [alt]="logo.alt" />
+    }
   </div>
 </section>
