feat: add CTA section to the home page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,4 @@
 <app-anywhere-clipboard-access></app-anywhere-clipboard-access>
 <app-supercharge></app-supercharge>
 <app-references></app-references>
+<app-cta></app-cta>
