--- a/src/app/shared/cta/cta.component.html
+++ b/src/app/shared/cta/cta.component.html
@@ -1,1 +1,15 @@
-<p>cta works!</p>
+<!-- CTA -->
+<section id="bottom">
+  <div class="section-container my-20">
+    <h3>Clipboard for iOS and MacOs</h3>
+    <p class="section-content mb-10">
+      Available for free on the App Store. Download for Mac or iOS, sync with
+      iCloud and you're ready to start adding to your clipboard.
+    </p>
+
+    <div class="button-container">
+      <a href="" class="bg-strongCyan" appButton> Download for iOs </a>
+      <a href="" class="bg-lightBlue" appButton> Download for Mac </a>
+    </div>
+  </div>
+</section>
