--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,3 +42,8 @@ body {
     background-image: url("../public/bg-header-desktop.png");
   }
 }
+
+.ficon:hover {
+  filter: invert(53%) sepia(68%) saturate(434%) hue-rotate(121deg)
+    brightness(101%) contrast(94%);
+}
