fix: fix small typo

--- a/src/app/features/hero/hero.component.html
+++ b/src/app/features/hero/hero.component.html
@@ -11,7 +11,7 @@
 
     <!-- Button Container -->
     <div class="button-container">
-      <a href="" class="bg-strongCyan" appButton> Download for iOs </a>
+      <a href="" class="bg-strongCyan" appButton> Download for iOS </a>
       <a href="" class="bg-lightBlue" appButton> Download for Mac </a>
     </div>
   </div>
