fix: fix section content size

--- a/src/app/features/anywhere-clipboard-access/anywhere-clipboard-access.component.html
+++ b/src/app/features/anywhere-clipboard-access/anywhere-clipboard-access.component.html
@@ -1,7 +1,7 @@
 <section id="access" class="">
   <div class="section-container my-20">
     <h3>{{ sectionData.title }}</h3>
-    <p class="section-content mb-24">
+    <p class="section-content text-xl mb-24">
       {{ sectionData.description }}
     </p>
 
