--- a/src/app/features/supercharge/supercharge.component.html
+++ b/src/app/features/supercharge/supercharge.component.html
@@ -1,7 +1,7 @@
 <section id="supercharge">
   <div class="section-container my-20">
     <h3>Supercharge your workflow</h3>
-    <p class="mb-16 section-content">
+    <p class="mb-16 section-content text-xl">
       We've got the tools to boost your productivity
     </p>
     <!-- Items Container -->
