--- a/src/app/features/features/features.component.html
+++ b/src/app/features/features/features.component.html
@@ -13,7 +13,10 @@
       <div
         class="flex flex-col mt-16 mb-24 space-y-12 text-xl md:mb-60 md:text-left md:pl-16 md:w-1/2"
       >
-        <div class="" *ngFor="let feat of features">
+        <div
+          class="flex flex-col items-center md:block"
+          *ngFor="let feat of features"
+        >
           <h5 class="">
             {{ feat.title }}
           </h5>
